# DOOMLOADER

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  example.py  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  release.yml
cmake/: Install.cmake  Package.cmake  SetupJUCE.cmake  SetupNAM.cmake  SetupTone3000.cmake
docs/: amp-modeling.md  getting-started.md  ir-loading.md  mobile-development.md  preset-management.md
doomloader/: __init__.py  amp_simulator.py  cli.py  file_handler.py  loader.py  nam_loader.py  processor.py
example_nam_files/: example_amp.json
examples/: CMakeLists.txt  README.md  advanced_nam_processing.py  basic_usage.py
examples/basic/: CMakeLists.txt  main.cpp
impulse_responses/examples/: PLACEHOLDER.md  README.md
include/: AmpModeler.h  DoomloaderEngine.h  IRLoader.h  PresetManager.h
presets/: clean-twin.json  metal-madness.json  vintage-crunch.json
sample_nam_models/metadata/: clean_jazz.json  modern_high_gain.json  vintage_tube.json
src/: CMakeLists.txt
src/Core/: DoomloaderEngine.cpp  IRLoader.cpp
tests/: test_loader.py  test_processor.py
